Version 0.4.19, 2011-
--------------
+ Ztring: more compatibility with uCLibC

Version 0.4.18, 2011-03-03
--------------
+ HTTP helpers in Unicode version
x BitStream Little Endian: count of remaining bits was wrong
x ZtringList and ZtringListList :: Read(): do not remove pending delimiters
x File Open status: error with Windows return value

Version 0.4.17, 2010-12-16
--------------
+ uClibc compatibility, thanks to Metin KAYA <metin@EnderUNIX.org>
+ BitStream: Skip methods improvements

Version 0.4.16, 2010-10-24
-------------
+ BitStream: Peek3()
x Decimal point issues with some specific compilers/OS
x ZtringList: issues with EOL
x #3025205, File is not opened if a "?" is in it

Version 0.4.15, 2010-05-14
-------------
x Ztring: Solaris compatibility was broken
x Solaris: pkgtrans packages, with optional default directory as script parameter

Version 0.4.14, 2010-05-02
-------------
+ Ztring: better compatibility with std::string
+ TinyXml import

Version 0.4.13, 2010-04-16
-------------
+ MSVC2010 project files update
+ Solaris package creation files update (with relocation)

Version 0.4.12, 2010-03-08
-------------
+ MSVC2010 project files
+ Solaris package creation files

Version 0.4.11, 2010-02-19
-------------
+ Ztring: To_int128u()
+ Ztring: ISO_8859_1()
x File::Open(): no Access_Read_Write (Windows)
x BigEndian2int128u()
x Ztring::To_UUID(): wrong transformation text to UUID in some cases

Version 0.4.10, 2010-01-03
-------------
+ Ztring: From a file
+ Ztring::Duration_From_Milliseconds: handling of negative values
x UUID: better validation
x ZtringList: better handling of CSV import
x File: Write append on Linux/Mac
x File: No read/write on Linux/Mac
x Dir: No dir test and creation on Mac/Linux
x float64_int64s: handling of big integers

Version 0.4.9, 2009-11-13
-------------
+ File: bug in Open()

Version 0.4.8, 2009-10-30
-------------
+ Thread: reorganization, better support
x File: Support of non-seekable files