@@ -1,6 +1,7 @@
 Version 0.4.19, 2011-
 --------------
 + Ztring: more compatibility with uCLibC
+x BitStream_LE: wrong result if buffer underrun
 
 Version 0.4.18, 2011-03-03
 --------------
